Correction bug switch dark mode non checked

--- a/scss/components/_switch.scss
+++ b/scss/components/_switch.scss
@@ -53,8 +53,8 @@
   position: absolute;
   top: 50%;
   left: 4px;
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   background: $violet;
   border-radius: 50%;
   transform: translateY(-50%);
